# rename-image-files

./: README.md  justfile  pyproject.toml
docs/: technical.md
rename_image_files/: __init__.py  cli.py  generators.py  image_utils.py  list_files.py  rate_limiter.py  rename_image_files.py  types.py  utils.py
tests/: test_rename_files.py  test_utils.py
