[project]
name = "rename-image-files"
version = "0.1.0"
description = "Rename image files using vision language models"
authors = [{ name = "Oliver Steele", email = "steele@osteele.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

dependencies = ["click", "exifread", "llm"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "Pillow"]

[project.scripts]
rename-image-files = "rename_image_files:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E", # pycodestyle errors
  "F", # Pyflakes rules
  "I", # isort import sorting
  "UP", # upgrade syntax to newer Python versions
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
exclude = ['.venv/']

[[tool.mypy.overrides]]
module = ["exifread", "llm", "llm.*"]
ignore_missing_imports = true
